Fixed Flags not showing up on individual status pages

--- a/resources/facebook_status.css
+++ b/resources/facebook_status.css
@@ -19,6 +19,7 @@
 .facebook-status-delete,
 .facebook-status-respond,
 .facebook-status-repost,
+.facebook-status-share,
 .facebook-status-details .flag-wrapper {
   font-size: 90%;
   margin-left: 0.5em;
