--- a/submodules/fbss_comments/fbss_comments.css
+++ b/submodules/fbss_comments/fbss_comments.css
@@ -39,6 +39,7 @@
 
 .fbss-comments-closure .flag-wrapper {
   margin-left: 0;
+  font-size: 90%;
 }
 
 .fbss-comments-created {
